--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,9 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<title>My App</title>
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents" data-theme="dark">%sveltekit.body%</div>
 	</body>
 </html>
